--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -85,7 +85,7 @@ body{
 	overflow: hidden !important;
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 576px) {
 	body{
 		/* max-height: 100%; */
 		/* overflow-y: hidden; */
